# dashboardmd

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  plan.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  quality.yml  release.yml
dashboardmd/: __init__.py  analyst.py  cli.py  connector.py  dashboard.py  engine.py  model.py  query.py  refresh.py  suggest.py  time.py
dashboardmd/connectors/: __init__.py  cube.py  lookml.py  metabase.py  powerbi.py
dashboardmd/interop/: __init__.py  cube.py  lookml.py  metabase.py  powerbi.py
dashboardmd/sources/: __init__.py  base.py  database.py  dataframe.py  file.py  sql.py
docs/: core-architecture.md
examples/: README.md
examples/connector-plugin/: README.md  connectors.py  dashboard.md  dashboard.py
examples/connector-plugin/data/: tasks.json  team.csv  time_logs.csv
examples/custom-connector/: README.md  connectors.py  dashboard.md  dashboard.py
examples/custom-connector/data/: team.json
examples/hr-dashboard/: README.md  dashboard.md  dashboard.py
examples/hr-dashboard/data/: departments.csv  employees.csv
examples/sales-analytics/: README.md  dashboard.md  dashboard.py
examples/sales-analytics/data/: customers.csv  orders.csv  products.csv
examples/web-traffic/: README.md  dashboard.md  dashboard.py
examples/web-traffic/data/: conversions.csv  pageviews.csv
tests/: README.md  conftest.py
tests/integration/: README.md  test_csv_to_dashboard.py  test_end_to_end.py  test_multi_source.py
tests/samples/: customers.csv  orders.csv  products.csv
tests/unit/: README.md  test_analyst.py  test_cli.py  test_connectors.py  test_dashboard.py  test_engine.py  test_import.py  test_interop.py  test_model.py  test_query.py  test_refresh.py  test_suggest.py  test_time.py
tests/unit/sources/: README.md  __init__.py  test_base.py  test_database.py  test_dataframe.py  test_file.py  test_sql.py
