[project]
name = "dashboardmd"
version = "0.1.0"
description = "Code-first analytics dashboard platform — same data model as Metabase, Looker, PowerBI, Cube — but in Python, for agents, outputting Markdown"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Minh Luc Van" },
]
keywords = [
    "analytics",
    "dashboard",
    "bi",
    "markdown",
    "ai-agent",
    "data-analysis",
    "metabase",
    "looker",
    "powerbi",
    "cube",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]
dependencies = [
    "notebookmd>=1.0.0",
    "duckdb>=1.0.0",
]

[project.scripts]
dashboardmd = "dashboardmd.cli:main"

[project.optional-dependencies]
pandas = ["pandas>=2.1.0", "tabulate>=0.9.0"]
plotting = ["matplotlib>=3.8.0"]
all = [
    "pandas>=2.1.0",
    "tabulate>=0.9.0",
    "matplotlib>=3.8.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pandas>=2.1.0",
    "tabulate>=0.9.0",
    "matplotlib>=3.8.0",
]
lint = [
    "ruff>=0.4.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/minhlucvan/dashboardmd"
Repository = "https://github.com/minhlucvan/dashboardmd"
Documentation = "https://github.com/minhlucvan/dashboardmd#readme"
Issues = "https://github.com/minhlucvan/dashboardmd/issues"
Changelog = "https://github.com/minhlucvan/dashboardmd/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dashboardmd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "requires_pandas: Tests that require pandas to be installed",
    "requires_matplotlib: Tests that require matplotlib to be installed",
    "requires_duckdb: Tests that require duckdb to be installed",
    "slow: Tests that take more than 1 second to run",
    "integration: Integration tests that test multiple components",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line length handled by formatter
    "SIM108", # ternary operator — readability preference
    "TCH003", # moving stdlib imports to TYPE_CHECKING — too noisy
    "UP038",  # isinstance with union types — readability preference
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["N806", "E741", "F841", "B007"]

[tool.ruff.lint.isort]
known-first-party = ["dashboardmd"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["dashboardmd"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 80
